falta hacer @media de contacto y reveer el js

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+@font-face{
+    font-family: "vontjack";
+    src: url(/font/Vontjack.otf);
+}
+
 a{
     text-decoration: none;
 }
@@ -11,7 +17,7 @@ body{
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     background-color: #11597a;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 ul{
@@ -39,7 +45,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 5%;
+    margin: 20px 2.5%;
     flex-wrap: wrap;
 }
 
@@ -48,8 +54,7 @@ ul{
     margin: 0;
 }
 
-nav ul li a{
-
+.nav a{
     padding: 0px 20px;
     color: #F1F6F9;
     font-weight: 600;
@@ -65,8 +70,9 @@ nav i{
     padding: 0px 10px;
 }
 
+
+
 .fa-brands{
-    display: flex;
     color: #F1F6F9;
     font-size: 1.2em;
 }
@@ -76,6 +82,7 @@ nav i{
 }
 
 footer{
+    
     background-color: #191717;
     display: flex;
     flex-direction: column;
@@ -85,6 +92,7 @@ footer{
     width: 100%;
     min-height: 100px;
     margin-top: auto;
+
 }
 
 footer .titulo-footer,footer .copy, .informacion{
@@ -92,30 +100,36 @@ footer .titulo-footer,footer .copy, .informacion{
 }
 
 
-.copy{
-    margin-top: auto;
-}
 
-footer .fa-solid{
-    font-size: 1.3em;
-}
 
 .info-footer{
     font-size: 1em;
+    
+    width: auto;
 }
 
 .footer-item{
     display: flex;
-    gap: 10px;
-    margin: 10px 10%;
     flex-wrap: wrap;
+    gap: 5px;
+    
+    /* flex-wrap: wrap; */
+}
+
+.footer-item i{
+    
+    font-size: 1.3em;
 }
 
 .informacion{
+    margin-top: auto;
+    
     width: 100%;
     display: flex;
-    margin-top: auto;
-    justify-content: center;
+    gap: 5px;
+    justify-content: space-around;
+    flex-direction: row;
+
    
 }
 
@@ -129,8 +143,291 @@ footer .fa-solid{
 }
 
 .copy{
+    background-color: #2d2d2e;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    font-size: 0.9em;
+    margin-top: auto;
 }
 
+.brazo-fondo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    min-height: 90vh;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/img/brazo-tatuado.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.titulo{
+    color: white;
+    font-size: 4em;
+    font-family: vontjack;
+}
+
+.redes a i{
+    font-size: 1.3em;
+}
+.redes {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-width: 10%;
+    min-height: 30px;
+}
+
+.titulo span{
+    color: #19A7CE;
+}
+
+@keyframes entrada{
+    0%{
+        transform: scale(0);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.titulo{
+    animation: entrada 1.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+
+/* ----------------Reviews -----------------------*/
+#reviews{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #e3e2e2;
+}
+
+.titulo-reviews{
+
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    margin: 10px 0px;
+    font-size: 1.3em;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.reviews-contenedor{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.review-box{
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    width: 500px;
+    min-height: 215px;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    cursor: pointer;
+    
+
+}
+
+.imagen-perfil{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+
+.imagen-perfil img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.perfil{
+    display: flex;
+    align-items: center;
+}
+
+.usuario-nombre{
+    display: flex;
+    flex-direction: column;
+}
+
+.usuario-nombre strong{
+    color: #060606;
+    font-size: 1.1em;
+    font-weight: 500;
+    /* letter-spacing: 0.5px; */
+}
+
+.usuario-nombre span{
+    color: #909090;
+    font-size: 0.8em;
+}
+
+.review{
+    color: #f2e71b;
+}
+
+.review-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.comentario p{
+    font-style: italic;
+    font-size: 0.9em;
+    color: #373636;
+    letter-spacing: 0.5spx;
+}
+
+.caja{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1400px;
+}
+
+@media(max-width:1064px){
+    .reviews-contenedor{
+        width: 45%;
+        padding: 10px;;
+    }
+    
+}
+
+@media(max-width:700px){
+    .reviews-contenedor{
+        width: 100%;
+        padding: 10px;;
+    }
+    
+    
+}
+
+/* ----------------Formulario -----------------------*/
+
+.formu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #191717
+    
+  }
+
+  .imagen {
+    position: relative;
+    flex: 1;
+    width: 50%;
+    height: 100%;
+  }
+  
+  .imagen::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(/img/Fondo.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%; 
+    height: 100%;
+    opacity: 0.5;
+  }
+
+  .texto-animado {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    font-size:300%;
+    font-family: "vontjack";
+    animation: entrada 1.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+    
+    
+  }
+  
+  .texto-animado h2{
+    color: #F1F6F9;
+  }
+  .texto-animado span{
+    color: #19A7CE;
+  }
+  
+  .formulario {
+    flex: 1;
+    background-color: #191717;
+    color: white;
+    font-family:'Roboto', sans-serif;
+    padding: 40px;
+    width: 50%;
+    height: 100%;
+  }
+  
+  .formulario h1 {
+    text-align: center;
+  }
+  
+  .formulario div {
+    margin-bottom: 20px;
+  }
+  
+  .formulario label {
+    display: block;
+    font-weight: bold;
+  }
+  
+  .formulario .control {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .formulario textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .formulario .boton {
+    background-color:#191717;
+    color:#FFFFFF; ;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+ 
+  .boton {
+    background-color: #191717;
+    color: #FFFFFF;
+  }
+  .boton:hover {
+    background-color: #19A7CE;
+    color: #FFFFFF;
+  }
+  
